--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,17 +2,42 @@
   line-height: 2.5;
 }
 
+html {
+  background-color: #EFEFEF;
+}
+
+#banner {
+  background: rgba(239, 239, 239, 0.3);
+
+}
+
+#container {
+  background: rgba(239, 239, 239, 0.3);
+}
+
+body {
+  opacity: 1;
+  transition: 1s opacity;
+  background-image: url('http://www.equatoriallogistics.com/wp-content/uploads/2017/06/Career-BAckground.jpg');
+
+}
+body.fade-out {
+  opacity: 0;
+  transition: none;
+}
+
 h1 {
   margin-left: 500px;
   margin-top: 50px;
   font-family: 'Lato', sans-serif;
-  color: #A9A9A9;
+  color: black;
+  height: 60px;
 }
 
 #subtitle {
   margin-left: 590px;
   font-family: 'Lato', sans-serif;
-  color: #A9A9A9;
+  color: black;
 
 }
 
@@ -21,6 +46,13 @@ h1 {
   font-family: 'Lato', sans-serif;
   background-color: #CAEBF2;
   color: black;
+  overflow: hidden;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
+}
+
+#view-home:hover {
+  box-shadow: 20px 20px 40px 0px rgba(0,0,0,0.5);
+  cursor: pointer;
 }
 
 #add-home {
@@ -28,6 +60,13 @@ h1 {
   font-family: 'Lato', sans-serif;
   background-color: #CAEBF2;
   color: black;
+  overflow: hidden;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
+}
+
+#add-home:hover {
+  box-shadow: 20px 20px 40px 0px rgba(0,0,0,0.5);
+  cursor: pointer;
 }
 
 #par1_home {
@@ -35,6 +74,187 @@ h1 {
   margin-left: 50px;
   font-family: 'Lato', sans-serif;
 }
+
+.row {
+  align-items: center;
+  margin: 10px;
+}
+
+.card {
+  overflow: hidden;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
+  font-family: 'Lato', sans-serif;
+  background: rgba(172, 132, 132, 0.3);
+}
+
+.card:hover {
+box-shadow: 20px 20px 40px 0px rgba(0,0,0,0.5);
+cursor: pointer;
+font-family: 'Lato', sans-serif;
+}
+
+#apply {
+  overflow: hidden;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
+  font-family: 'Lato', sans-serif;
+  background-color: #CAEBF2;
+  color: black;
+}
+
+#apply:hover {
+  box-shadow: 20px 20px 40px 0px rgba(0,0,0,0.5);
+  cursor: pointer;
+}
+
+#new-app-view {
+  overflow: hidden;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
+  font-family: 'Lato', sans-serif;
+  background-color: #CAEBF2;
+  color: black;
+}
+
+#new-app-view:hover {
+  box-shadow: 20px 20px 40px 0px rgba(0,0,0,0.5);
+  cursor: pointer;
+}
+
+#home-view {
+  overflow: hidden;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
+  font-family: 'Lato', sans-serif;
+  background-color: #CAEBF2;
+  color: black;
+  margin-left: 560px;
+
+}
+
+#home-view:hover {
+  box-shadow: 20px 20px 40px 0px rgba(0,0,0,0.5);
+  cursor: pointer;
+}
+
+/* Style the navigation menu */
+.topnav {
+  overflow: hidden;
+  background: rgba(169, 169, 169, 0.1);
+  width: 300px;
+  margin-left: 1200px;
+}
+
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnav #myLinks {
+  display: none;
+}
+
+/* Style navigation menu links */
+.topnav a {
+  color: black;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+/* Style the hamburger menu */
+.topnav a.icon {
+  color: #FF3B3F;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.topnav a.icon:hover {
+  color: #FF3B3F;
+}
+
+/* Add a grey background color on mouse-over */
+.topnav a:hover {
+  background: rgba(169, 169, 169, 0.1);
+  color: black;
+}
+
+/* Style the active link (or home/logo) */
+.active {
+  background: rgba(169, 169, 169, 0.1);
+  color: #FF3B3F;
+}
+
+#edit {
+  background-color: #FF3B3F;
+  color: black;
+  overflow: hidden;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
+  font-family: 'Lato', sans-serif;
+  align-content: right;
+}
+
+#edit:hover {
+  box-shadow: 20px 20px 40px 0px rgba(0,0,0,0.5);
+  cursor: pointer;
+}
+
+#add-btn {
+  background-color: #FF3B3F;
+  color: black;
+  overflow: hidden;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
+  font-family: 'Lato', sans-serif;
+  align-content: right;
+}
+
+#add-btn:hover {
+  box-shadow: 20px 20px 40px 0px rgba(0,0,0,0.5);
+  cursor: pointer;
+}
+
+#view-add {
+  background-color: #CAEBF2;
+  color: black;
+  overflow: hidden;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
+  font-family: 'Lato', sans-serif;
+  margin-left: 620px;
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+
+#view-add:hover {
+  box-shadow: 20px 20px 40px 0px rgba(0,0,0,0.5);
+  cursor: pointer;
+}
+
+h3 {
+  margin-left: 30px;
+}
+
+#dots {
+  color: #FF3B3F;
+  margin-left: 680px;
+}
+
+footer {
+  width: 100%;
+  height: 100px;
+  background-color: #FF3B3F;
+  margin-top: 200px;
+  color: white;
+  text-align: center;
+  padding-top: 50px;
+}
+
+#form {
+  background: rgba(202, 235, 242, 0.4);
+}
+
+#resume1 {
+  color: black;;
+}
+
+
+
+
 
 
 
