--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -7,18 +7,19 @@ html {
 }
 
 #banner {
-  background: rgba(239, 239, 239, 0.3);
+  background: rgba(239, 239, 239, 0.4);
 
 }
 
 #container {
-  background: rgba(239, 239, 239, 0.3);
+  background: rgba(239, 239, 239, 0.4);
 }
 
 body {
   opacity: 1;
   transition: 1s opacity;
   background-image: url('http://www.equatoriallogistics.com/wp-content/uploads/2017/06/Career-BAckground.jpg');
+  width: 100%;
 
 }
 body.fade-out {
@@ -73,6 +74,7 @@ h1 {
   margin-top: 100px;
   margin-left: 50px;
   font-family: 'Lato', sans-serif;
+  color: black;
 }
 
 .row {
@@ -80,28 +82,41 @@ h1 {
   margin: 10px;
 }
 
-.card {
+#reminder-card {
   overflow: hidden;
   box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
   font-family: 'Lato', sans-serif;
   background: rgba(172, 132, 132, 0.3);
 }
 
-.card:hover {
+#reminder-card:hover {
 box-shadow: 20px 20px 40px 0px rgba(0,0,0,0.5);
 cursor: pointer;
 font-family: 'Lato', sans-serif;
 }
 
-#apply {
+#job-card {
   overflow: hidden;
   box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
   font-family: 'Lato', sans-serif;
-  background-color: #CAEBF2;
+  background: rgba(202, 235, 242, 0.8);
+}
+
+#job-card:hover {
+box-shadow: 20px 20px 40px 0px rgba(0,0,0,0.5);
+cursor: pointer;
+font-family: 'Lato', sans-serif;
+}
+
+#complete {
+  overflow: hidden;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
+  font-family: 'Lato', sans-serif;
+  background-color: rgba(202, 235, 242, 0.7);
   color: black;
 }
 
-#apply:hover {
+#complete:hover {
   box-shadow: 20px 20px 40px 0px rgba(0,0,0,0.5);
   cursor: pointer;
 }
@@ -171,14 +186,14 @@ font-family: 'Lato', sans-serif;
 
 /* Add a grey background color on mouse-over */
 .topnav a:hover {
-  background: rgba(169, 169, 169, 0.1);
+  background: rgba(202, 235, 242, 0.4);
   color: black;
 }
 
 /* Style the active link (or home/logo) */
 .active {
   background: rgba(169, 169, 169, 0.1);
-  color: #FF3B3F;
+  color: rgba(172, 132, 132, 0.2);
 }
 
 #edit {
@@ -195,13 +210,28 @@ font-family: 'Lato', sans-serif;
   cursor: pointer;
 }
 
-#add-btn {
+#delete {
   background-color: #FF3B3F;
   color: black;
   overflow: hidden;
   box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
   font-family: 'Lato', sans-serif;
   align-content: right;
+}
+
+#delete:hover {
+  box-shadow: 20px 20px 40px 0px rgba(0,0,0,0.5);
+  cursor: pointer;
+}
+
+#add-btn {
+  background-color: rgba(223, 66, 66, 0.9);
+  color: black;
+  overflow: hidden;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
+  font-family: 'Lato', sans-serif;
+  align-content: right;
+  border-color: rgba(223, 66, 66, 0.8);
 }
 
 #add-btn:hover {
@@ -227,19 +257,20 @@ font-family: 'Lato', sans-serif;
 
 h3 {
   margin-left: 30px;
+  color: black;
 }
 
 #dots {
-  color: #FF3B3F;
+  color: rgba(223, 66, 66, 0.8);
   margin-left: 680px;
 }
 
 footer {
   width: 100%;
-  height: 100px;
-  background-color: #FF3B3F;
+  height: 150px;
+  background: rgba(172, 132, 132, 0.4);
   margin-top: 200px;
-  color: white;
+  color: black;
   text-align: center;
   padding-top: 50px;
 }
@@ -251,6 +282,13 @@ footer {
 #resume1 {
   color: black;;
 }
+
+#database {
+  background: rgba(202, 235, 242, 0.6);
+}
+
+
+
 
 
 
